# 9th-tile-app

./: .gitignore  LICENSE  README.md  angular.json  package-lock.json  package.json  tsconfig.app.json  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: app.component.css  app.component.html  app.component.ts  app.routes.ts
src/app/components/celebration/: celebration.css  celebration.html  celebration.ts
src/app/components/grid/: grid.css  grid.html  grid.ts
src/app/components/playstation/: playstation.css  playstation.html  playstation.spec.ts  playstation.ts
src/app/guards/auth-guard/: auth-guard.ts
src/app/pages/auth/: auth.component.css  auth.component.html  auth.component.ts
src/app/pages/playground/: playground.component.html  playground.component.ts
src/app/services/firebase-service/: firebase.service.ts
src/app/services/game-service/: game-feasibility-checker.class.ts  game.ts
src/app/services/rust-method-services/: rust-method.service.ts  rust-method.spec.ts
src/app/shared/: auth.interface.ts  interface.ts
src/assets/: inputs.json  secrets.ts
