[package]
name = "the-ninth-tile"
version = "0.2.0"
description = "A Tauri App"
authors = ["Jayant Thakur"]
edition = "2026"

license = "MIT"

repository = "https://github.com/Jayant061/9th-tile-app"
homepage = "https://github.com/Jayant061/9th-tile-app"
documentation = "https://github.com/Jayant061/9th-tile-app#readme"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "eight_puzzle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"

# Cargo.toml
dotenvy = "0.15"

